--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -128,7 +128,7 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692204432-cloud-site-reliability-engineer-sre-'>4Catalyzer Cloud Site Reliability Engineer (SRE) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692204432-cloud-site-reliability-engineer-sre-'>4Catalyzer Cloud Site Reliability Engineer (SRE) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -162,7 +162,7 @@ NodeJS.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365102002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
+<h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365102002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
 <p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -280,7 +280,7 @@ for this job. Quizlet's mission is to help students (and their teachers) practic
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/invitae/jobs/1771625?gh_jid=1771625'>Job Application for Senior Site Reliability Engineer at Invitae</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/invitae/jobs/1771625?gh_jid=1771625'>Job Application for Senior Site Reliability Engineer at Invitae</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Invitae is looking for a Site Reliability Engineer whom will help operations scale 
 durably while increasing product velocity, and further deliver on our mission to?...</p>
@@ -339,7 +339,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thousandeyes/jobs/1775064'>Job Application for Principal Site Reliability Engineer (SRE), Production Systems at ThousandEyes</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thousandeyes/jobs/1775064'>Job Application for Principal Site Reliability Engineer (SRE), Production Systems at ThousandEyes</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -359,7 +359,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/skipthedishes/job/oQNvafw2'>SkipTheDishes Careers - Site Reliability Engineer (SRE)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/skipthedishes/job/oQNvafw2'>SkipTheDishes Careers - Site Reliability Engineer (SRE)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -393,7 +393,7 @@ Identity?...</p>
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/onesignal/1825dfda-35f3-4faa-be75-07b97a3a3afd'>OneSignal - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/onesignal/1825dfda-35f3-4faa-be75-07b97a3a3afd'>OneSignal - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -413,11 +413,11 @@ Identity?...</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vinted/ea89a8c9-0dad-4909-871d-be7cfe715403'>Vinted - Site Reliability Engineer &amp; Team Lead</a></h5> 
+<h5><a href='https://jobs.lever.co/vinted/ea89a8c9-0dad-4909-871d-be7cfe715403'>Vinted - Site Reliability Engineer &amp; Team Lead</a></h5> 
 <p><span class="badge badge-light">Vilnius</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-incomm.icims.com/jobs/9109/site-reliability-engineer---japan/job'>Site Reliability Engineer - Japan in Tokyo, Tokyo | Careers at InComm</a></h5> 
+<h5><a href='https://careers-incomm.icims.com/jobs/9109/site-reliability-engineer---japan/job'>Site Reliability Engineer - Japan in Tokyo, Tokyo | Careers at InComm</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 1, 2019 ... InComm is now hiring a Site Reliability Engineer - Japan in Tokyo, Tokyo. 
 Review all of the job details and apply today!</p>
@@ -426,7 +426,7 @@ Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/collagecom/jobs/4340506002'>Job Application for Senior Site Reliability Engineer (Remote) at Collage.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/collagecom/jobs/4340506002'>Job Application for Senior Site Reliability Engineer (Remote) at Collage.com</a></h5> 
 <p><span class="badge badge-light">Vancouver Canada</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
